--- a/src/main/resources/templates/data.html
+++ b/src/main/resources/templates/data.html
@@ -5,8 +5,8 @@
     <title>JSON-JS</title>
 </head>
 <body>
-<h1>countries: a long list</h1>
+<h1>Results!</h1>
 <div id="country"></div>
-<script src="script.js"></script>
+<script src="script.js" ></script>
 </body>
 </html>
