--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -5,8 +5,8 @@
     <title>JSON-JS</title>
 </head>
 <body>
-<h1>Results!</h1>
+<h1>Results</h1>
 <div id="country"></div>
-<script src="script.js" ></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
