final for real ?

--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -5,8 +5,10 @@
     <title>Long bus trips</title>
 </head>
 <body>
-<h1>Test</h1>
-<div id="BusLines"></div>
+<h1>Output</h1>
+<div id="BusLines">
+    <h2>...generating data...</h2>
+</div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
